--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css">
 </head>
 <body>
   <app-root></app-root>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://getbootstrap.com/docs/3.3/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
